--- a/template/Admin/add_course.html
+++ b/template/Admin/add_course.html
@@ -1,77 +1,39 @@
 {% extends "admin_index.html" %}
 {% block body %}
-<h1 align="center">ADD BATCH</h1>
-<form id="form1" name="form1" method="post" action="/stock/admin_add_batch_post/">
-{% csrf_token %}
-  <table class="table table-bordered"  align="center">
+<h1 align="center">ADD COURSE</h1>
+<form id="form1" name="form1" method="post" action="/stock/admin_add_course_post/">
+    {% csrf_token %}
+  <table class="table table-bordered"  >
     <tr>
-      <td>Batch Name </td>
-      <td>
+      <th>COURSE NAME </th>
+      <td >
         <input type="text" name="textfield" class="form-control" />
-     </td>
+    </td>
     </tr>
     <tr>
-      <td>Batch Year </td>
+      <th> DESCRIPTION</th>
       <td>
-        <select name="select"  class="form-control" >
-            <option>2021</option>
-            <option>2022</option>
-            <option>2023</option>
-            <option>2024</option>
-            <option>2025</option>
-            <option>2026</option>
-            <option>2027</option>
-            <option>2028</option>
-            <option>2029</option>
-            <option>2030</option>
-
-        </select>
-     </td>
-    </tr>
-    <tr>
-      <td>Batch Month </td>
-      <td>
-        <select name="select2"  class="form-control">
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="April">April</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">july</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">Nnovember</option>
-            <option value="December">December</option>
-
-        </select>
+        <textarea name="textarea" class="form-control" ></textarea>
       </td>
     </tr>
     <tr>
-      <td>Course</td>
+      <th>DURATION</th>
       <td>
-
-
-
-        <select name="select3"  class="form-control">
-
-            {% for i in c %}
-
-
-
-            <option value="{{ i.pk }}"> {{ i.course_name }} </option>
-
-            {% endfor %}
-
-        </select>
-     </td>
+        <input type="text" name="textfield2"  class="form-control"/>
+      </td>
+    </tr>
+      <tr>
+      <th>FEE</th>
+      <td>
+        <input type="text" name="textfield3"  class="form-control"/>
+      </td>
     </tr>
     <tr>
-      <td colspan="2" align="center">
+      <td colspan="2" align="center" >
 
           <input type="submit" name="Submit" value="ADD" class="btn btn-success" />
-         </td>
+
+      </td>
     </tr>
   </table>
 </form>
