--- a/template/index.html
+++ b/template/index.html
@@ -210,7 +210,7 @@
 
 
 			<li class="nav-item">
-                <a class="nav-link" href="/tt/">
+                <a class="nav-link" href="/stock/login/">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Logout</span></a>
             </li>
