--- a/template/home_temp.html
+++ b/template/home_temp.html
@@ -7,7 +7,7 @@
 
   <title>Milliondotss</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="" name="keywordss">
 
   <!-- Favicons -->
   <link href="/static/home_temp/assets/img/favicon.png" rel="icon">
